# explore_llm_fine_tuning

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
ag_news/: inference_distilbert.py  inference_smollm_135m.py  train_distilbert.py  train_smollm_135m.py  train_smollm_135m_lora.py
capybara/: train_qwen3.py
deep_math/: train_qwen2.py
llava/: train_qwen_vl_3b.py
open_assistant/: inference_mistral_7b.py  train_mistral_7b.py
sql/: inference_llama3.py  train_llama3.py
ultra_feedback/: train_qwen2.py
unsloth/: convert_llama3_alpaca_to_gguf.py  game_board.py  inference_llama3.py  inference_llama3_alpaca.py  train_gpt_oss_20b_grpo_2048.py  train_llama3_alpaca.py  train_llama3_grpo.py  train_qwen3_14b.py
