[project]
name = "explore_llm_fine_tuning"
version = "0.1.0"
description = "Explore various techniques for fine-tuning large language models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
